syntax = "proto3";

package card;

import "abilities.proto";
import "color.proto";
import "comment.proto";
import "cost.proto";
import "effects.proto";
import "targets.proto";
import "types.proto";

message Card {
  string name = 1;
  types.Typeline typeline = 2;

  cost.CastingCost cost = 3;
  cost.CostReducer reducer = 4;

  bool cannot_be_countered = 5;

  repeated color.Color colors = 6;

  string oracle_text = 7;

  optional abilities.Enchant enchant = 8
      [(comment.comment) = "The aura modifiers associated with this card."];

  repeated effects.Effect to_cast = 9;
  repeated effects.Effect effects = 10;

  repeated effects.Effect etb_abilities = 11;
  repeated effects.StaticAbility static_abilities = 12;
  repeated effects.ActivatedAbility activated_abilities = 13;
  repeated effects.TriggeredAbility triggered_abilities = 14;
  repeated effects.GainManaAbility mana_abilities = 15;
  repeated effects.ReplacementEffect replacement_abilities = 16;

  optional effects.Count dynamic_power_toughness = 17;
  optional int32 power = 18;
  optional int32 toughness = 19;
  bool etb_tapped = 20;

  map<int32, uint32> keywords = 21;

  repeated targets.Restriction restrictions = 22;

  optional Card back_face = 23;
}